* Bugfix: Class selector for timerange handle was broken in scss file

--- a/core/asset/css/timerange.scss
+++ b/core/asset/css/timerange.scss
@@ -27,7 +27,7 @@
 			width:4px;
 			background:url(../img/timerange.png) no-repeat 0 -17px; }
 
-		.slide {
+		.slider {
 			.handle {
 				position:absolute;
 				width:20px;
